<resources>
    //Theme
    <string name="preferenceFile" translatable="false">PreferenceFile</string>
    <string name="currentTheme" translatable="false">baseTheme</string>
    <string name="greenTheme" translatable="false">greenTheme</string>
    <string name="purpleTheme" translatable="false">purpleTheme</string>

    <string name="app_name" translatable="false">Loot Goblin\'s Reliquary</string>
    //Text all over the app
    <string name="appTitle" translatable="false">Loot Goblin\'s Reliquary</string>
    <string name="email" translatable="false">Email</string>
    <string name="password">Password</string>
    <string name="test" translatable="false">Test</string>
    <string name="edit">Edit</string>
    <string name="save">Save</string>
    <string name="characters">Characters</string>
    <string name="NPCs">NPCs</string>
    <string name="notes">Notes</string>
    <string name="shared">Shared</string>
    <string name="search" translatable="false">Search</string>
    <string name="done">Done</string>
    //Login text
    <string name="forgotPassword">Forgot Password?</string>
    <string name="login">Login</string>
    <string name="createUser">Create User</string>
    //My Profile Text
    <string name="myProfile">My Profile</string>
    //Settings
    <string name="settings">Settings</string>
    <string name="theme">Theme</string>
    <string name="themeName">Theme Name</string>
    <string name="language">Language</string>
    //Create New User
    <string name="createNewUser">Create New User</string>
    //Characters
    <string name="createNewChar">Create New Character</string>
    <string name="characterLookup" translatable="false">Input character name and click search</string>
    <string name="newCharacter">New Character</string>
    <string name="viewCharacter">View Character</string>
    <string name="editCharacter">Edit Character</string>
    //NPCs
    <string name="createNewNPC">Create New NPC</string>
    <string name="npcLookup" translatable="false">Input npc name and click search</string>
    <string name="newNPC">New NPC</string>
    <string name="viewNPC">View NPC</string>
    <string name="editNPC">Edit NPC</string>
    //Descriptors
    //Basic Info
    <string name="basic">Basic Info</string> //Category
    <string name="name">Name</string>
    <string name="nameSuggestion">Ishtar, Eric, James, Xarexes, Victoria</string>
    <string name="titleKenningMoniker">Title, Kenning, Moniker</string>
    <string name="titleKenningMonikerSuggestion">Duke, The Strong, High Priestess, The Bastard Prince, The Seducer</string>
    <string name="race">Race</string>
    <string name="raceSuggestion">Human, Elf, Cyborg, Werewolf, Serpentfolk</string>
    <string name="gender">Gender</string>
    <string name="genderSuggestion">Male, Female, Genderless, Apache Attack Helicopter</string>
    <string name="age">Age</string>
    <string name="ageSuggestion">16,396,4590</string>
    <string name="nationality">Nationality</string>
    <string name="nationalitySuggestion">Sindarin, Nurubian, British, Evalian, Asgaardian</string>
    <string name="hometown">Hometown</string>
    <string name="hometownSuggestion">New York, Ravenport, Gotham, Orion Prime X-2, Gondor</string>
    <string name="continent">Continent</string>
    <string name="continentSuggestion">Shanay Karren, Europe, Jartareth, Asia</string>
    <string name="rpClass">Class</string>
    <string name="rpClassSuggestion">Hunter, Fighter, Operative, Sniper, Warlock</string>
    <string name="sexuality">Sexuality</string>
    <string name="sexualitySuggestion">Straight, Bi, Gay, Asexual, Pansexual</string>
    <string name="traitsAttracted">Traits Attracted To</string>
    <string name="traitsAttractedSuggestion">Specific Races, Personality Traits, Physical traits, Behaviours</string>
    <string name="occupation">Occupation</string>
    <string name="occupationSuggestion">Spymaster, Assassin, Baker, Queen, Spaceship Pilot</string>
    <string name="religion">Religion</string>
    <string name="religionSuggestion">Calistria, Shamanism, The God Emperor, Christian, Asmodeus</string>
    //Looks
    <string name="looks">Looks</string> //Category
    <string name="eyes">Eyes</string>
    <string name="eyesSuggestion">Green, Magenta, Almond Shaped, Cat\'s Pupil, Multiple Eyes Like a Spider, Completely White</string>
    <string name="skin">Skin</string>
    <string name="skinSuggestion">Pale, Dark, Tanned, Blue, Scaled</string>
    <string name="hair">Hair</string>
    <string name="hairSuggestion">Blond, Red, Green, Short, Long, Wavy, Spiky, Braided, Mohawk</string>
    <string name="scent">Scent</string>
    <string name="scentSuggestion">Oranges and Vanilla, Musky, Decaying, Manly, Roses, Gun Oil</string>
    <string name="voice">Voice</string>
    <string name="voiceSuggestion">Sensual, Calm and Deep, Scratchy, Old, Jamaican Accent</string>
    <string name="characteristicFeatures">Characteristic Features</string>
    <string name="characteristicFeaturesSuggestions">Tattoos, Scars, Birthmarks, Horns, Hoofed Feet, Gills</string>
    //Personality Traits
    <string name="personalityTraits">Personality Traits</string> //Category
    <string name="personality">Personality</string>
    <string name="personalitySuggestion">Creative Scientist, Leader, Gentle Soul, Mediator, Survivor</string>
    <string name="behaviourAndManners">Behaviour and Manners</string>
    <string name="behaviourAndMannersSuggestion">Always Opens The Door For Ladies, Flinches When Someone Makes A Sudden Movement, Always Surveys A Room To Know Where The Exits Are</string>
    <string name="characterTraits">Character Traits</string>
    <string name="characterTraitsSuggestions">Caring, Happy, Courageous, Evil, Protective, Sadistic, Pious</string>
    <string name="characterFlaws">Character Flaws</string>
    <string name="characterFlawsSuggestions">Unlucky, Malicious, Low Self Esteem, Weak Liver, Heavy Drinker</string>
    <string name="quirks">Quirks</string>
    <string name="quirksSuggestion">Likes Tea, Only Wears Red Pants, Purrs When Content, Drinks Blood, Rubs Lucky Stone</string>
    <string name="hobbies">Hobbies</string>
    <string name="hobbiesSuggestions">Fishes, Collects Crystals, Tinkers With Laser Weapons, Sings, Programs</string>
    <string name="strengthsAndWeaknesses">Strengths and Weaknesses</string>
    <string name="strengthsAndWeaknessesSuggestions">Strong Morals, Bleeder, Weak Lungs, Godly Strength, Compassionate</string>
    <string name="wantsAndDesires">Wants and Desires</string>
    <string name="wantsAndDesiresSuggestions">For Someone Who Accepts the Beast Within, To Win the Lottery, To Find Someone to Love, To Get Tied Up and Punished</string>
    <string name="fearsAndInsecurities">Fears and Insecurities</string>
    <string name="fearsAndInsecuritiesSuggestions">SPIDERS, Not Feeling Worthy of Love, Losing Someone Close, Thinking They are Not Good Enough, Dying</string>
    <string name="secrets">Secrets</string>
    <string name="secretsSuggestion">Is the Child of The Bad Guy, Is a Undercover Spy, Is a Vampire, Steals From The Party, Sold His Soul to A Demon</string>
    //Relations
    <string name="relations">Relations</string> //Category
    <string name="family">Family</string>
    <string name="familySuggestions">Mother, Father, Siblings, Uncles, Cousins, Evil Twins</string>
    <string name="alliesAndContacts">Allies and Contacts</string>
    <string name="alliesAndContactsSuggestions">Police Sergeant Gonzalez from NYPD, Shady Drugdealer, Loki Laufeyson, President of The Intergalatic Agency</string>
    <string name="enemies">Enemies</string>
    <string name="enemiesSuggestions">Avengers, The Mob, Vampire Clan, The Duke, Your Sister, That One Bard in the Tavern</string>
    <string name="affiliatedGroups">Affiliated Groups</string>
    <string name="affiliatedGroupsSuggestions">Hydra, The Thieves\'s Guild, The Paladin Order, Children of The Moon, The Wanderers Of The Unbeaten Path</string>
    // Goals and Background
    <string name="goalsAndBG">Goals and Background</string> //Category
    <string name="currentGoals">Current Goals</string>
    <string name="currentGoalsSuggestions">Bed the Hot Tavern Wench, Save the Princess, Avenge your Father\'s Death</string>
    <string name="backgroundStory">Background Story</string>
    <string name="backgroundStorySuggestions">It Can Range From: Orc Killed my Family to I Am the Thirteenth Son of The Thirteenth Son and I am Destined to Eradicate All Evil, Or it Can Be Simply I Still Have My Parents and I Really Just Want to Adventure</string>
    //Descriptors for NPCs only
    <string name="npcDescriptions">Descriptors for NPCs only</string> //Category
    <string name="specialAbilities">Special Abilities</string>
    <string name="specialAbilitiesSuggestions">Death Lasers Eyes, Charm Anything, Super Speed, Sneaky as Fuck</string>
    <string name="partOfWorld">How Are They Part of The World?</string>
    <string name="partOfWorldSuggestion">Is The Questgiver, Lives In The Next City the Party Goes to, Is A Vampire Hunter Married to A Bard, Leader of the Organization the Party is Part Of</string>
    <string name="hooksToPlayers">Hooks to Players</string>
    <string name="hooksToPlayersSuggestions">NPC is Really A PC\'s Father, NPC is a Loved One of A PC, Has a Quest For The Party</string>
    <string name="plotHooks">Plot Hooks</string>
    <string name="plotHooksSuggestions">NPC is The Murderer, NPC is The PCs Boss, Organization Leader, NPC Gives Them a Quest</string>
    <string name="motivations">Motivations</string>
    <string name="motivationsSuggestions">Is Obsessed With One of the PCs, Has Ulterior Motives, Wants The Party to Succeed, Needs The Party To Retrieve an Object</string>
    <string name="overlay_button">Overlay Button</string>
    <string name="characterName">characterName</string>

</resources>