<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="16dp"
    android:orientation="vertical"
    app:layout_constraintBottom_toBottomOf="parent"
    tools:layout_editor_absoluteX="1dp"
    tools:showIn="@layout/new_character">

    <TextView
        android:id="@+id/newCharacterPersonalityTraits"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hyphenationFrequency="none"
        android:paddingBottom="8dp"
        android:text="@string/personalityTraits"
        android:textAlignment="center"
        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
        android:textColor="@color/purpleTextColour"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/newCharacterPersonality"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/personality"
        android:textColor="@color/purpleTextColour"
        android:textSize="18sp" />

    <EditText
        android:id="@+id/newCharacterPersonalityTextInput"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/purpleTextFieldColour"
        android:ems="10"
        android:gravity="start|top"
        android:lines="3"
        android:hint="@string/personalitySuggestion"
        android:importantForAutofill="no"
        android:inputType="textMultiLine"
        android:textColor="@color/purpleTextColour" />

    <TextView
        android:id="@+id/newCharacterBehaviourAndManners"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/behaviourAndManners"
        android:textColor="@color/purpleTextColour"
        android:textSize="18sp" />

    <EditText
        android:id="@+id/newCharacterBehaviourAndMannersTextInput"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/purpleTextFieldColour"
        android:ems="10"
        android:gravity="start|top"
        android:lines="3"
        android:hint="@string/behaviourAndMannersSuggestion"
        android:importantForAutofill="no"
        android:inputType="textMultiLine"
        android:textColor="@color/purpleTextColour" />

    <TextView
        android:id="@+id/newCharacterCharacterTraits"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/characterTraits"
        android:textColor="@color/purpleTextColour"
        android:textSize="18sp" />

    <EditText
        android:id="@+id/newCharacterCharacterTraitsTextInput"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/purpleTextFieldColour"
        android:ems="10"
        android:gravity="start|top"
        android:lines="3"
        android:hint="@string/characterTraitsSuggestions"
        android:importantForAutofill="no"
        android:inputType="textMultiLine"
        android:textColor="@color/purpleTextColour" />

    <TextView
        android:id="@+id/newCharacterCharacterFlaws"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/characterFlaws"
        android:textColor="@color/purpleTextColour"
        android:textSize="18sp" />

    <EditText
        android:id="@+id/newCharacterCharacterFlawsTextInput"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/purpleTextFieldColour"
        android:ems="10"
        android:gravity="start|top"
        android:lines="3"
        android:hint="@string/characterFlawsSuggestions"
        android:importantForAutofill="no"
        android:inputType="textMultiLine"
        android:textColor="@color/purpleTextColour" />

    <TextView
        android:id="@+id/newCharacterQuirks"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/quirks"
        android:textColor="@color/purpleTextColour"
        android:textSize="18sp" />

    <EditText
        android:id="@+id/newCharacterQuirksTextInput"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/purpleTextFieldColour"
        android:ems="10"
        android:gravity="start|top"
        android:lines="3"
        android:hint="@string/quirksSuggestion"
        android:importantForAutofill="no"
        android:inputType="textMultiLine"
        android:textColor="@color/purpleTextColour" />

    <TextView
        android:id="@+id/newCharacterHobbies"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/hobbies"
        android:textColor="@color/purpleTextColour"
        android:textSize="18sp" />

    <EditText
        android:id="@+id/newCharacterHobbiesTextInput"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/purpleTextFieldColour"
        android:ems="10"
        android:gravity="start|top"
        android:lines="3"
        android:hint="@string/hobbiesSuggestions"
        android:importantForAutofill="no"
        android:inputType="textMultiLine"
        android:textColor="@color/purpleTextColour" />

    <TextView
        android:id="@+id/newCharacterStrengthsAndWeaknesses"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/strengthsAndWeaknesses"
        android:textColor="@color/purpleTextColour"
        android:textSize="18sp" />

    <EditText
        android:id="@+id/newCharacterStrengthsAndWeaknessesTextInput"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/purpleTextFieldColour"
        android:ems="10"
        android:gravity="start|top"
        android:lines="3"
        android:hint="@string/strengthsAndWeaknessesSuggestions"
        android:importantForAutofill="no"
        android:inputType="textMultiLine"
        android:textColor="@color/purpleTextColour" />

    <TextView
        android:id="@+id/newCharacterWantsAndDesires"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/wantsAndDesires"
        android:textColor="@color/purpleTextColour"
        android:textSize="18sp" />

    <EditText
        android:id="@+id/newCharacterWantsAndDesiresTextInput"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/purpleTextFieldColour"
        android:ems="10"
        android:gravity="start|top"
        android:lines="3"
        android:hint="@string/wantsAndDesiresSuggestions"
        android:importantForAutofill="no"
        android:inputType="textMultiLine"
        android:textColor="@color/purpleTextColour" />

    <TextView
        android:id="@+id/newCharacterFearsAndInsecurities"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/fearsAndInsecurities"
        android:textColor="@color/purpleTextColour"
        android:textSize="18sp" />

    <EditText
        android:id="@+id/newCharacterFearsAndInsecuritiesTextInput"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/purpleTextFieldColour"
        android:ems="10"
        android:gravity="start|top"
        android:lines="3"
        android:hint="@string/fearsAndInsecuritiesSuggestions"
        android:importantForAutofill="no"
        android:inputType="textMultiLine"
        android:textColor="@color/purpleTextColour" />

    <TextView
        android:id="@+id/newCharacterSecrets"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/secrets"
        android:textColor="@color/purpleTextColour"
        android:textSize="18sp" />

    <EditText
        android:id="@+id/newCharacterSecretsTextInput"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/purpleTextFieldColour"
        android:ems="10"
        android:gravity="start|top"
        android:lines="3"
        android:hint="@string/secretsSuggestion"
        android:importantForAutofill="no"
        android:inputType="textMultiLine"
        android:textColor="@color/purpleTextColour" />

</LinearLayout>