<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="16dp"
    android:orientation="vertical"
    app:layout_constraintBottom_toBottomOf="parent"
    tools:layout_editor_absoluteX="1dp"
    tools:showIn="@layout/new_character">

    <TextView
        android:id="@+id/newCharacterBasicInfo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hyphenationFrequency="none"
        android:text="@string/basic"
        android:textAlignment="center"
        android:textColor="@color/purpleTextColour"
        android:textSize="18sp" />
    <TextView
        android:id="@+id/newCharacterCharName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="4dp"
        android:hyphenationFrequency="none"
        android:text="@string/name"
        android:textColor="@color/purpleTextColour"
        android:textSize="18sp" />

    <EditText
        android:id="@+id/newCharacterCharNameTextInput"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/purpleTextFieldColour"
        android:ems="10"
        android:gravity="start|top"
        android:hint="@string/nameSuggestion"
        android:importantForAutofill="no"
        android:inputType="textMultiLine"
        android:lines="3"
        android:textColor="@color/purpleTextColour"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/newCharacterKenningText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="8dp"
        android:paddingBottom="4dp"
        android:text="@string/titleKenningMoniker"
        android:textColor="@color/purpleTextColour"
        android:textSize="18sp" />

    <EditText
        android:id="@+id/newCharacterKenningsTextInput"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/purpleTextFieldColour"
        android:ems="10"
        android:gravity="start|top"
        android:lines="3"
        android:hint="@string/titleKenningMonikerSuggestion"
        android:importantForAutofill="no"
        android:inputType="textMultiLine"
        android:textColor="@color/purpleTextColour"
        android:textSize="18sp"/>

    <TextView
        android:id="@+id/newCharacterRace"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="8dp"
        android:paddingBottom="4dp"
        android:text="@string/race"
        android:textColor="@color/purpleTextColour"
        android:textSize="18sp" />

    <EditText
        android:id="@+id/newCharacterRaceTextInput"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/purpleTextFieldColour"
        android:ems="10"
        android:lines="3"
        android:gravity="start|top"
        android:hint="@string/raceSuggestion"
        android:importantForAutofill="no"
        android:inputType="textMultiLine"
        android:textColor="@color/purpleTextColour"
        android:textSize="18sp"/>

    <TextView
        android:id="@+id/newCharacterGender"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="8dp"
        android:paddingBottom="4dp"
        android:text="@string/gender"
        android:textColor="@color/purpleTextColour"
        android:textSize="18sp" />

    <EditText
        android:id="@+id/newCharacterGenderTextInput"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/purpleTextFieldColour"
        android:ems="10"
        android:lines="3"
        android:gravity="start|top"
        android:hint="@string/genderSuggestion"
        android:importantForAutofill="no"
        android:inputType="textMultiLine"
        android:textColor="@color/purpleTextColour" />

    <TextView
        android:id="@+id/newCharacterAge"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="8dp"
        android:paddingBottom="4dp"
        android:text="@string/age"
        android:textColor="@color/purpleTextColour"
        android:textSize="18sp" />

    <EditText
        android:id="@+id/newCharacterAgeTextInput"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/purpleTextFieldColour"
        android:ems="10"
        android:lines="3"
        android:gravity="start|top"
        android:hint="@string/ageSuggestion"
        android:importantForAutofill="no"
        android:inputType="textMultiLine"
        android:textColor="@color/purpleTextColour" />

    <TextView
        android:id="@+id/newCharacterNationality"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="8dp"
        android:paddingBottom="4dp"
        android:text="@string/nationality"
        android:textColor="@color/purpleTextColour"
        android:textSize="18sp" />

    <EditText
        android:id="@+id/newCharacterNationalityTextInput"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/purpleTextFieldColour"
        android:ems="10"
        android:lines="3"
        android:gravity="start|top"
        android:hint="@string/nationalitySuggestion"
        android:importantForAutofill="no"
        android:inputType="textMultiLine"
        android:textColor="@color/purpleTextColour" />

    <TextView
        android:id="@+id/newCharacterHometown"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="8dp"
        android:paddingBottom="4dp"
        android:text="@string/hometown"
        android:textColor="@color/purpleTextColour"
        android:textSize="18sp" />

    <EditText
        android:id="@+id/newCharacterHometownTextInput"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/purpleTextFieldColour"
        android:ems="10"
        android:lines="3"
        android:gravity="start|top"
        android:hint="@string/hometownSuggestion"
        android:importantForAutofill="no"
        android:inputType="textMultiLine"
        android:textColor="@color/purpleTextColour" />

    <TextView
        android:id="@+id/newCharacterContinent"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="8dp"
        android:paddingBottom="4dp"
        android:text="@string/continent"
        android:textColor="@color/purpleTextColour"
        android:textSize="18sp" />

    <EditText
        android:id="@+id/newCharacterContinentTextInput"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/purpleTextFieldColour"
        android:ems="10"
        android:lines="3"
        android:gravity="start|top"
        android:hint="@string/continentSuggestion"
        android:importantForAutofill="no"
        android:inputType="textMultiLine"
        android:textColor="@color/purpleTextColour" />

    <TextView
        android:id="@+id/newCharacterClass"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="8dp"
        android:paddingBottom="4dp"
        android:text="@string/rpClass"
        android:textColor="@color/purpleTextColour"
        android:textSize="18sp" />

    <EditText
        android:id="@+id/newCharacterClassTextInput"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/purpleTextFieldColour"
        android:ems="10"
        android:lines="3"
        android:gravity="start|top"
        android:hint="@string/rpClassSuggestion"
        android:importantForAutofill="no"
        android:inputType="textMultiLine"
        android:textColor="@color/purpleTextColour" />

    <TextView
        android:id="@+id/newCharacterSexuality"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="8dp"
        android:paddingBottom="4dp"
        android:text="@string/sexuality"
        android:textColor="@color/purpleTextColour"
        android:textSize="18sp" />

    <EditText
        android:id="@+id/newCharacterSexualityTextInput"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/purpleTextFieldColour"
        android:ems="10"
        android:lines="3"
        android:gravity="start|top"
        android:hint="@string/sexualitySuggestion"
        android:importantForAutofill="no"
        android:inputType="textMultiLine"
        android:textColor="@color/purpleTextColour" />

    <TextView
        android:id="@+id/newCharacterOccupation"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="8dp"
        android:paddingBottom="4dp"
        android:text="@string/occupation"
        android:textColor="@color/purpleTextColour"
        android:textSize="18sp" />

    <EditText
        android:id="@+id/newCharacterOccupationTextInput"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/purpleTextFieldColour"
        android:ems="10"
        android:lines="3"
        android:gravity="start|top"
        android:hint="@string/occupationSuggestion"
        android:importantForAutofill="no"
        android:inputType="textMultiLine"
        android:textColor="@color/purpleTextColour" />

    <TextView
        android:id="@+id/newCharacterReligion"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="8dp"
        android:paddingBottom="4dp"
        android:text="@string/religion"
        android:textColor="@color/purpleTextColour"
        android:textSize="18sp" />

    <EditText
        android:id="@+id/newCharacterReligionTextInput"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/purpleTextFieldColour"
        android:ems="10"
        android:lines="3"
        android:gravity="start|top"
        android:hint="@string/religionSuggestion"
        android:importantForAutofill="no"
        android:inputType="textMultiLine"
        android:textColor="@color/purpleTextColour" />

</LinearLayout>