<?xml version="1.0" encoding="utf-8"?>


<LinearLayout xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="16dp"
    android:orientation="vertical"
    app:layout_constraintBottom_toBottomOf="parent"
    tools:layout_editor_absoluteX="1dp"
    tools:showIn="@layout/new_character">

    <TextView
        android:id="@+id/newCharacterLooks"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hyphenationFrequency="none"
        android:text="@string/looks"
        android:textAlignment="center"
        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
        android:textColor="@color/purpleTextColour"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/newCharacterEyes"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="4dp"
        android:text="@string/eyes"
        android:textColor="@color/purpleTextColour"
        android:textSize="18sp" />

    <EditText
        android:id="@+id/newCharacterEyesTextInput"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/purpleTextFieldColour"
        android:ems="10"
        android:gravity="start|top"
        android:lines="3"
        android:hint="@string/eyesSuggestion"
        android:importantForAutofill="no"
        android:inputType="textMultiLine"
        android:textColor="@color/purpleTextColour" />

    <TextView
        android:id="@+id/newCharacterSkin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="8dp"
        android:paddingBottom="4dp"
        android:text="@string/skin"
        android:textColor="@color/purpleTextColour"
        android:textSize="18sp" />

    <EditText
        android:id="@+id/newCharacterSkinTextInput"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/purpleTextFieldColour"
        android:ems="10"
        android:gravity="start|top"
        android:lines="3"
        android:hint="@string/skinSuggestion"
        android:importantForAutofill="no"
        android:inputType="textMultiLine"
        android:textColor="@color/purpleTextColour" />

    <TextView
        android:id="@+id/newCharacterHair"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="8dp"
        android:paddingBottom="4dp"
        android:text="@string/hair"
        android:textColor="@color/purpleTextColour"
        android:textSize="18sp" />

    <EditText
        android:id="@+id/newCharacterHairTextInput"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/purpleTextFieldColour"
        android:ems="10"
        android:gravity="start|top"
        android:lines="3"
        android:hint="@string/hairSuggestion"
        android:importantForAutofill="no"
        android:inputType="textMultiLine"
        android:textColor="@color/purpleTextColour" />

    <TextView
        android:id="@+id/newCharacterScent"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="8dp"
        android:paddingBottom="4dp"
        android:text="@string/scent"
        android:textColor="@color/purpleTextColour"
        android:textSize="18sp" />

    <EditText
        android:id="@+id/newCharacterScentTextInput"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/purpleTextFieldColour"
        android:ems="10"
        android:gravity="start|top"
        android:lines="3"
        android:hint="@string/scentSuggestion"
        android:importantForAutofill="no"
        android:inputType="textMultiLine"
        android:textColor="@color/purpleTextColour" />

    <TextView
        android:id="@+id/newCharacterVoice"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="8dp"
        android:paddingBottom="4dp"
        android:text="@string/voice"
        android:textColor="@color/purpleTextColour"
        android:textSize="18sp" />

    <EditText
        android:id="@+id/newCharacterVoiceTextInput"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/purpleTextFieldColour"
        android:ems="10"
        android:gravity="start|top"
        android:lines="3"
        android:hint="@string/voiceSuggestion"
        android:importantForAutofill="no"
        android:inputType="textMultiLine"
        android:textColor="@color/purpleTextColour" />

    <TextView
        android:id="@+id/newCharacterCharacteristicFeatures"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="8dp"
        android:paddingBottom="4dp"
        android:text="@string/characteristicFeatures"
        android:textColor="@color/purpleTextColour"
        android:textSize="18sp" />

    <EditText
        android:id="@+id/newCharacterCharacteristicFeaturesTextInput"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/purpleTextFieldColour"
        android:ems="10"
        android:gravity="start|top"
        android:lines="3"
        android:hint="@string/characteristicFeaturesSuggestions"
        android:importantForAutofill="no"
        android:inputType="textMultiLine"
        android:textColor="@color/purpleTextColour" />

</LinearLayout>